# sdkwork-tts

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  DEBUGGING.md  Dockerfile  Dockerfile.gpu  GETTING_STARTED.md  INSTALLATION_SUMMARY.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  QWEN.md  QWEN3_TTS_QUICKSTART.md  QWEN3_TTS_SUMMARY.md  README.md  README_PERFECT.md  docker-compose.yml  download_model.py  download_wav2vec.py  launch_indextts2.ps1  launch_ui.bat  launch_ui.ps1  sdkwork.app.config.json  server.example.yaml  test_linear.rs  test_matmul.rs
.claude/agents/: rust-ml-architect.md
.claude/commands/: implement-phase.md  ralph-rewrite.md
.github/workflows/: ci-cd.yml
apps/: README.md
benches/: inference_bench.rs
checkpoints/: .gitkeep  config.yaml  tokenizer_english.json  unigram_vocab.json  vocab.json
crates/sdkwork-api-tts-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-tts-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-tts-assembly/src/: bootstrap.rs  lib.rs
crates/sdkwork-api-tts-standalone-gateway/: Cargo.toml
deploy/: install-service.sh  sdkwork-tts.service
docs/: ARCHITECTURE.md  CHANNELS_GUIDE.md  CHANNELS_IMPLEMENTATION_REPORT.md  CLI_VERIFICATION_GUIDE.md  COMPLETE_INSTALLATION_DEPLOYMENT_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SYSTEM_REPORT.md  DEVELOPMENT_PLAN.md  FINAL_COMPLETION_REPORT.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_PROGRESS_REPORT.md  FUNCTIONAL_TEST_REPORT.md  HANDOFF_2026-02-11.md  INDEX.yaml  INDEXTTS2_OPTIMIZATION_REPORT.md  INTEGRATION_GUIDE.md  PERFECT_COMPLETION_REPORT.md  QWEN3_TTS_CLI_GUIDE.md  QWEN3_TTS_COMPLETE.md  QWEN3_TTS_FINAL_REPORT.md  QWEN3_TTS_FIX_REPORT.md  QWEN3_TTS_GUIDE.md  QWEN3_TTS_IMPLEMENTATION.md  QWEN3_TTS_IMPLEMENTATION_STATUS.md  QWEN3_TTS_INTEGRATION_SUMMARY.md  QWEN3_TTS_ROADMAP.md  QWEN3_TTS_STATUS.md  QWEN3_TTS_VERIFICATION.md  README.md  SERVER_COMPLETION_REPORT.md  SERVER_FINAL_STATUS.md  SERVER_IMPLEMENTATION_REPORT.md  SERVER_STATUS_REPORT.md  SERVER_USAGE_GUIDE.md  STATUS_2026-02-11.md
docs/product/prd/: PRD.md
examples/: basic_inference.rs  emotion_control.rs  library_integration.rs  qwen3_tts_basic.rs  sdk_integration.rs  streaming_tts.rs
nginx/: nginx.conf
scripts/: analyze_s2mel.py  analyze_speaker_dim.py  analyze_weights.py  audio_metrics.py  common.sh  convert_weights.py  diagnose.sh  generate_config.sh  generate_dummy_wav.py  install.ps1  install.sh  list_tensors.py  parity_compare.py  qwen_emo.py  run_validation_suite.ps1  start_server.bat  start_server.sh  test_bigvgan.py  test_tokenizer.rs  ui_launcher.py  uninstall.ps1  uninstall.sh  upgrade.sh  verify_install.ps1  verify_install.sh
specs/: README.md  component.spec.json  next-session-prompt.md  plan.md  requirements.md
src/: lib.rs  main.rs
src/audio/: loader.rs  mel.rs  mod.rs  output.rs  resampler.rs  speaker_cache.rs
src/config/: mod.rs  model_config.rs
src/core/: builder.rs  config_center.rs  error.rs  error_ext.rs  event_bus.rs  metrics.rs  metrics_export.rs  mod.rs  plugin.rs  resource.rs  traits.rs
src/emotion/: enhanced.rs  mod.rs
src/engine/: config.rs  emotion.rs  fish_speech_adapter.rs  indextts2_adapter.rs  mod.rs  pipeline.rs  qwen3_tts_adapter.rs  registry.rs  speaker.rs  traits.rs
src/hub/: hub_core.rs  mod.rs  registry.rs
src/inference/: batch.rs  mod.rs  model_loader.rs  optimized_index.rs  pipeline.rs  qwen3_tts.rs  streaming.rs
src/models/: mod.rs
src/sdk/: builder.rs  config.rs  error.rs  facade.rs  mod.rs  types.rs
src/server/: config.rs  middleware.rs  mod.rs  server_core.rs  speaker_lib.rs  types.rs
src/streaming/: mod.rs
src/text/: mod.rs  normalizer.rs  segmenter.rs  tokenizer.rs
src/utils/: mod.rs
src/voice/: cloning.rs  design.rs  mod.rs
tests/: integration_test.rs  synthesis_integration_tests.rs
(+93 files in other folders)
